tests/fail/expr/await.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/await.rs:4:29
  |
4 |         one_assert::assert!(fut.await);
  |                             ^^^^^^^^^ expected `bool`, found integer
